--- a/index.html
+++ b/index.html
@@ -48,11 +48,10 @@
     <div class="speakers__photos">
         <div class="empty"></div>
         <img class="person__photo" src="sonya.png" alt="Спикер 1"/>
-        <img class="person__photo" src="sonya.png" alt="Спикер 2"/>
-        <img class="person__photo" src="sonya.png" alt="Спикер 3"/>
-        <img class="person__photo" src="sonya.png" alt="Спикер 4"/>
-        <img class="person__photo" src="sonya.png" alt="Спикер 5"/>
-        <img class="person__photo" src="sonya.png" alt="Спикер 6"/>
+        <img class="person__photo" src="speaker2.png" alt="Спикер 2"/>
+        <img class="person__photo" src="speaker3.png" alt="Спикер 3"/>
+        <img class="person__photo" src="speaker4.png" alt="Спикер 4"/>
+        <img class="person__photo" src="speaker5.png" alt="Спикер 5"/>
         <div class="empty"></div>
     </div>
     <button class="speakers__button">Расписание</button>
